--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.15.6",
     "express-sessions": "^1.0.6",
     "mocha": "^5.2.0",
+    "mysql": "^2.17.1",
     "nodemon": "^1.19.2"
   }
 }
