--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "express-sessions": "^1.0.6",
+    "mongoose": "^5.7.5",
     "mysql": "^2.17.1",
     "nodemon": "^1.19.2"
   },
