--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "express-sessions": "^1.0.6",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.5",
     "mysql": "^2.17.1",
-    "nodemon": "^1.19.2"
+    "nodemon": "^1.19.2",
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
