--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^5.7.5",
     "mysql": "^2.17.1",
     "nodemon": "^1.19.2",
+    "passport": "^0.4.0",
     "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
