--- a/KafkaBackEnd/package.json
+++ b/KafkaBackEnd/package.json
@@ -1,27 +1,33 @@
 {
-  "name": "back-end",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha || true",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^1.0.3",
-    "bcrypt-nodejs": "0.0.3",
-    "formidable": "^1.1.1",
-    "glob": "^7.1.2",
-    "images-upload-middleware": "^1.1.1",
-    "kafka-node": "^2.5.0",
-    "mongodb": "^2.2.31",
-    "mongodb-autoincrement": "^1.0.1",
-    "mongoose": "^4.12.4",
-    "multer": "^1.3.0",
-    "nodemailer": "^4.6.4",
+    "body-parser": "^1.18.3",
+    "client-sessions": "^0.8.0",
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "express-sessions": "^1.0.6",
+    "jsonwebtoken": "^8.5.1",
+    "kafka-node": "^3.0.1",
+    "mongoose": "^5.7.5",
+    "mysql": "^2.17.1",
+    "nodemon": "^1.19.2",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
-    "uuidv4": "^1.0.0"
+    "passport-jwt": "^4.0.0"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^5.2.0"
   }
 }
